hphp/hack/test/typecheck/splat/type_splat_expr_splat_bad.php.exp
ERROR: File "type_splat_expr_splat_bad.php", line 15, characters 18-20:
Invalid argument (Typing[4323])
  File "type_splat_expr_splat_bad.php", line 4, characters 14-14:
  `T` is a constrained type parameter
  File "type_splat_expr_splat_bad.php", line 4, characters 19-31:
  This type constraint is violated
  File "type_splat_expr_splat_bad.php", line 4, characters 20-27:
  Expected `arraykey`
  File "type_splat_expr_splat_bad.php", line 12, characters 18-20:
  But got `float`
ERROR: File "type_splat_expr_splat_bad.php", line 16, characters 13-15:
Invalid argument (Typing[4323])
  File "type_splat_expr_splat_bad.php", line 4, characters 14-14:
  `T` is a constrained type parameter
  File "type_splat_expr_splat_bad.php", line 4, characters 19-31:
  This type constraint is violated
  File "type_splat_expr_splat_bad.php", line 4, characters 20-27:
  Expected `arraykey`
  File "type_splat_expr_splat_bad.php", line 13, characters 20-24:
  But got `bool`
ERROR: File "type_splat_expr_splat_bad.php", line 16, characters 13-15:
Invalid argument (Typing[4323])
  File "type_splat_expr_splat_bad.php", line 4, characters 14-14:
  `T` is a constrained type parameter
  File "type_splat_expr_splat_bad.php", line 4, characters 19-31:
  This type constraint is violated
  File "type_splat_expr_splat_bad.php", line 4, characters 20-27:
  Expected `arraykey`
  File "type_splat_expr_splat_bad.php", line 13, characters 27-29:
  But got `float`
ERROR: File "type_splat_expr_splat_bad.php", line 17, characters 10-12:
Invalid argument (Typing[4323])
  File "type_splat_expr_splat_bad.php", line 4, characters 14-14:
  `T` is a constrained type parameter
  File "type_splat_expr_splat_bad.php", line 4, characters 19-31:
  This type constraint is violated
  File "type_splat_expr_splat_bad.php", line 4, characters 20-27:
  Expected `arraykey`
  File "type_splat_expr_splat_bad.php", line 14, characters 23-27:
  But got `bool`
ERROR: File "type_splat_expr_splat_bad.php", line 17, characters 10-12:
Invalid argument (Typing[4323])
  File "type_splat_expr_splat_bad.php", line 4, characters 14-14:
  `T` is a constrained type parameter
  File "type_splat_expr_splat_bad.php", line 4, characters 19-31:
  This type constraint is violated
  File "type_splat_expr_splat_bad.php", line 4, characters 20-27:
  Expected `arraykey`
  File "type_splat_expr_splat_bad.php", line 14, characters 30-32:
  But got `float`
